--- a/EmbarkToTalk/src/app/talk/talk.page.html
+++ b/EmbarkToTalk/src/app/talk/talk.page.html
@@ -49,6 +49,8 @@
         <img [src] = "userImage"/>
       </div>
         <div class="mycommentmargin">
+          <ion-icon name="language-outline" style= "float:right; color: gray" (click) = "send('computerText')"></ion-icon>
+          <ion-icon name="play-outline" style="float:right" (click) = "onListenToSentence(3)"></ion-icon>
           <p>{{log.player}}</p>
         </div>
     </div>
