--- a/EmbarkToTalk/src/app/lessons/shadowread/shadowread.page.html
+++ b/EmbarkToTalk/src/app/lessons/shadowread/shadowread.page.html
@@ -7,108 +7,171 @@
   </ion-select>
 </ion-item>
 <ion-content>
-  <div class="line-bc">
-    <!--chat start-->
-
-    <!--CP side comment start-->
-    <div *ngIf = "userTextCorrect; else bubble">
-      <div class="mycomment">
-        <div class="balloon6">
-          <div class="faceiconright">
-            <img [src] = "userImage"/>
+  <div class = "bg-style">
+  <div #list class = "fixed-content" [scrollTop] = "list.scrollHeight">
+    <div class="line-bc">
+  
+      <!--chat start-->
+      <div *ngFor="let log of conversationLog; let i=index">
+        <ng-template #bubble>
+          <div class="mycomment">
+            <div class="balloon6">
+              <div class="faceiconright">
+                <img [src] = "userImage"/>
+              </div>
+            </div>
           </div>
-            <!-- <div *ngIf = "!choiceUserTrans">
-              <div *ngFor = "let voice of userArray" class="mycommentmargin" (click) = "send('userText'); send(voice)">
-                <ion-icon name="language-outline" style= "float:left" (click) = "send('choiceOne')"></ion-icon>
-                <p>{{voice}}</p>
+        </ng-template>
+  
+        <div *ngIf = "log.computer">
+          <div class="balloon6">
+            <div class="faceicon">
+              <img [src] = "cpImage"/>
             </div>
+            <div class="chatting">
+              <div  class="says">
+                <ion-icon name="language-outline" style= "float:right; color: gray" (click) = "setUserArray(log.computer, i)"></ion-icon>
+                <ion-icon name="play-outline" style="float:right" (click) = "playAudio(i,'computer')"></ion-icon>
+                <p>{{log.computer}}</p>
+              </div>
             </div>
-            
-            <div *ngIf = "choiceUserTrans">
-              <div *ngFor = "let voice of voiceTextTrans" class="mycommentmargin" (click) = "send('userText'); send(voice)">
-                <ion-icon name="language-outline" style= "float:left" (click) = "send('choiceOne')"></ion-icon>
-                <p>{{voice}}</p>
+          </div>  
+        </div>
+        
+        <div class="mycomment">
+          <div class="balloon6">
+            <div class="faceiconright">
+              <img [src] = "userImage"/>
             </div>
-          </div> -->
-              <div *ngIf = "langSwitch" class="mycommentmargin">
+              <div class="mycommentmargin">
+                <ion-icon name="language-outline" style= "float:left" (click) = "setUserArray(log.player, i)"></ion-icon>
+                  <ion-icon name="play-outline" style="float:left" (click) = "playAudio(i,'player')"></ion-icon>
+                <p>{{log.player}}</p>
+              </div>
+          </div>
+        </div>
+      </div>
+  
+      <!--CP side comment start-->
+      <!-- <div *ngIf = "userTextCorrect; else bubble">
+        <div class="mycomment">
+          <div class="balloon6">
+            <div class="faceiconright">
+              <img [src] = "userImage"/>
+            </div> -->
+              <!-- <div *ngIf = "!choiceUserTrans">
+                <div *ngFor = "let voice of userArray" class="mycommentmargin" (click) = "send('userText'); send(voice)">
+                  <ion-icon name="language-outline" style= "float:left" (click) = "send('choiceOne')"></ion-icon>
+                  <p>{{voice}}</p>
+              </div>
+              </div>
+              
+              <div *ngIf = "choiceUserTrans">
+                <div *ngFor = "let voice of voiceTextTrans" class="mycommentmargin" (click) = "send('userText'); send(voice)">
+                  <ion-icon name="language-outline" style= "float:left" (click) = "send('choiceOne')"></ion-icon>
+                  <p>{{voice}}</p>
+              </div>
+            </div> -->
+                <!-- <div *ngIf = "langSwitch" class="mycommentmargin">
+                    <ion-icon name="language-outline" style= "float:left" (click) = "onSwitch()"></ion-icon>
+                    <ion-icon name="play-outline" style="float:left" (click) = "playUserAudio(99)"></ion-icon>
+                    <p>{{userTextCorrect}}</p>
+              </div>
+              <div *ngIf = "!langSwitch" class="mycommentmargin">
                   <ion-icon name="language-outline" style= "float:left" (click) = "onSwitch()"></ion-icon>
                   <ion-icon name="play-outline" style="float:left" (click) = "playUserAudio(99)"></ion-icon>
-                  <p>{{userTextCorrect}}</p>
+                  <p>{{userTextCorrectTrans}}</p>
             </div>
-            <div *ngIf = "!langSwitch" class="mycommentmargin">
-                <ion-icon name="language-outline" style= "float:left" (click) = "onSwitch()"></ion-icon>
-                <ion-icon name="play-outline" style="float:left" (click) = "playUserAudio(99)"></ion-icon>
-                <p>{{userTextCorrectTrans}}</p>
+            </div>
           </div>
-          </div>
-        </div>
-    </div>
-    
-    <!-- <ng-template #bubble>
-      <div *ngIf = "userArray.length === 0">
-      <div class="mycomment">
-        <div class="balloon6">
-          <div class="faceiconright">
-            <img [src] = "userImage"/>
-          </div>
+      </div> -->
+      
+      <ng-template #bubble>
+        <div *ngIf = "userArray.length === 0">
+        <div class="mycomment">
+          <div class="balloon6">
+            <div class="faceiconright">
+              <img [src] = "userImage"/>
+            </div>
+            </div>
           </div>
         </div>
-      </div>
-    </ng-template> -->
-
-    <div *ngIf = "computerSentence">
-    <div class="balloon6">
-      <div class="faceicon">
-        <!-- <img src="https://cdn0.iconfinder.com/data/icons/avatar-2/500/man-2-512.png"/> -->
-        <img [src] = "cpImage"/>
-      </div>
-      <div class="chatting">
-        <div *ngIf = "!choiceComputerTrans" class="says">
-          <ion-icon name="language-outline" style= "float:right; color: gray" (click) = "send('computerText')"></ion-icon>
-          <ion-icon name="play-outline" style="float:right" (click) = "onListenToSentence(3)"></ion-icon>
-          <p>{{computerSentence}}</p>
-        </div>
-        <div *ngIf = "choiceComputerTrans" class="says">
-          <ion-icon name="language-outline" style= "float:right; color:gray" (click) = "send('computerText')"></ion-icon>
-          <ion-icon *ngIf = "notPlaying" name="play-outline" style="float:right" (click) = "onListenToSentence(3)"></ion-icon>
-          <ion-icon *ngIf = "!notPlaying" name="stop-outline" style="float:right" (click) = "onStopSentence()"></ion-icon>
-          <p>{{data.computerText}}</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-    <div *ngIf = "userArray.length > 0">
-      <div class="mycomment">
+      </ng-template>
+  
+      <div *ngIf = "computerSentence">
       <div class="balloon6">
-        <div class="faceiconright">
-          <img [src] = "userImage"/>
+        <div class="faceicon">
+          <!-- <img src="https://cdn0.iconfinder.com/data/icons/avatar-2/500/man-2-512.png"/> -->
+          <img [src] = "cpImage"/>
         </div>
-          <!-- <div *ngIf = "!choiceUserTrans">
-            <div *ngFor = "let voice of userArray" class="mycommentmargin" (click) = "send('userText'); send(voice)">
-              <ion-icon name="language-outline" style= "float:left" (click) = "send('choiceOne')"></ion-icon>
-              <p>{{voice}}</p>
+        <div class="chatting">
+          <div *ngIf = "!choiceComputerTrans" class="says">
+            <ion-icon name="language-outline" style= "float:right; color: gray" (click) = "send('computerText')"></ion-icon>
+            <ion-icon name="play-outline" style="float:right" (click) = "onListenToSentence(3)"></ion-icon>
+            <p>{{computerSentence}}</p>
           </div>
-          </div>
-          
-          <div *ngIf = "choiceUserTrans">
-            <div *ngFor = "let voice of voiceTextTrans" class="mycommentmargin" (click) = "send('userText'); send(voice)">
-              <ion-icon name="language-outline" style= "float:left" (click) = "send('choiceOne')"></ion-icon>
-              <p>{{voice}}</p>
-          </div>
-        </div> -->
-            <div *ngFor = "let voice of userArray; let i=index" class="mycommentmargin">
-              <ion-icon name="language-outline" style= "float:left" (click) = "setUserArray(voice, i)"></ion-icon>
-              <ion-icon name="play-outline" style="float:left" (click) = "playUserAudio(i)"></ion-icon>
-              <p>{{voice}}</p>
+          <div *ngIf = "choiceComputerTrans" class="says">
+            <ion-icon name="language-outline" style= "float:right; color:gray" (click) = "send('computerText')"></ion-icon>
+            <ion-icon *ngIf = "notPlaying" name="play-outline" style="float:right" (click) = "onListenToSentence(3)"></ion-icon>
+            <ion-icon *ngIf = "!notPlaying" name="stop-outline" style="float:right" (click) = "onStopSentence()"></ion-icon>
+            <p>{{data.computerText}}</p>
           </div>
         </div>
       </div>
+    </div>
+  
+  
+        <div class="mycomment" *ngIf="showVoiceText">
+          <div class="balloon6">
+            <div class="faceiconright">
+              <img [src] = "userImage"/>
+            </div>
+              <div class="mycommentmargin">
+                <!-- <ion-icon name="language-outline" style= "float:left" (click) = "setUserArray(voice, i)"></ion-icon>
+                <ion-icon name="play-outline" style="float:left" (click) = "playUserAudio(i)"></ion-icon> -->
+                <p>...</p>
+              </div>
+          </div>
+        </div>
+        <div class="mycomment" *ngIf="!showVoiceText">
+        <div *ngIf = "langSwitch">
+          <div class="balloon6">
+            <div class="faceiconright">
+              <img [src] = "userImage"/>
+            </div>
+            <div class="mycommentmargin" *ngIf="showVoiceText2 && voiceText">
+              <ion-icon name="language-outline" style= "float:left" (click) = "onSwitch()"></ion-icon>
+              <ion-icon name="play-outline" style="float:left" (click) = "playAudio('current', 'player')"></ion-icon>
+              <p>{{ voiceText }}</p>
+            </div>
+          </div>
+        </div>
+        
+        <div *ngIf = "!langSwitch">
+          <div class="balloon6">
+            <div class="faceiconright">
+              <img [src] = "userImage"/>
+            </div>
+            <div class="mycommentmargin" *ngIf="showVoiceText2">
+              <ion-icon name="language-outline" style= "float:left" (click) = "onSwitch()"></ion-icon>
+              <ion-icon name="play-outline" style="float:left" (click) = "playAudio('current', 'player')"></ion-icon>
+              <p>{{ userTextCorrectTrans }}</p>
+            </div>
+          </div>
+        </div>
       </div>
+  
+    </div>
   </div>
   <hr>
-
-  <ion-card *ngIf = "choiceOne != ''">
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br><br>
+  
+  <ion-card *ngIf = "choiceOne !== ''">
     <ion-card-content *ngIf = "!choiceOneTran else choiceone">
       <ion-icon name="language-outline" style= "float:right" (click) = "send('choiceOne')"></ion-icon>
       <!-- <ion-icon name="play-outline" style="float:right" (click) = "onListenToSentence(1)"></ion-icon> -->
@@ -118,15 +181,12 @@
       {{choiceOne}}
     </ion-card-content>
   </ion-card>
-
   <ng-template #choiceone>
-    <ion-card *ngIf = "choiceOne != ''">
     <ion-card-content>
       <ion-icon name="language-outline" style= "float:right" (click) = "send('choiceOne')"></ion-icon>
       <ion-icon name="play-outline" style="float:right" (click) = "onListenToSentence(1)"></ion-icon>
       {{data.firstChoice}}
     </ion-card-content>
-  </ion-card>
   </ng-template>
 
   <ion-card *ngIf = "choiceTwo !== ''">
@@ -136,7 +196,6 @@
       {{choiceTwo}}
     </ion-card-content>
   </ion-card>
-
   <ng-template #choicetwo>
     <ion-card *ngIf = "choiceTwo !== ''">
     <ion-card-content>
@@ -147,13 +206,19 @@
   </ion-card>
   </ng-template>
   
+<br><br><br>
+<br><br><br>
+<br><br><br>
+<br><br><br>
+<br><br><br>
+<br><br><br>
+<br><br><br>
+<br><br><br>
 
-  <button id="translatebtn" (click)="send('nothing')" style="margin-left: auto;"></button>
-
-<br><br><br>
-<br><br><br>
-<br><br><br>
+<button id="translatebtn" (click)="send('nothing')" style="margin-left: auto;"></button>
+</div>
 </ion-content>
+
 
 <ion-footer>
   <ion-toolbar>
@@ -172,7 +237,7 @@
         <ion-col></ion-col>
         <ion-col >
           <ion-button shape = "round" color = "white"
-            (click)="onStartVoiceRecognition(); startLoad();" *ngIf="voiceActiveSectionDisabled; else voicesection;">
+            (click)="onStartVoiceRecognition();" *ngIf="voiceActiveSectionDisabled; else voicesection;">
             <ion-icon name="mic-outline" style = "font-size: 35px; color:rgb(71, 71, 71);"></ion-icon>
           </ion-button>          
         </ion-col>
@@ -209,7 +274,7 @@
         <ng-template #start>
           <ng-container *ngIf="voiceActiveSectionListening; else beginning" (click) = "onCloseVoiceRecognition">
             <!-- <span style="margin-left:10px"> -->
-              <ion-button shape = "round" color = "white" (click) = "onCloseVoiceRecognition(); startLoad()">
+              <ion-button shape = "round" color = "white" (click) = "onCloseVoiceRecognition();">
                   <ion-icon name="mic-outline" style = "font-size: 35px; color: red" #changeColor></ion-icon>
                 <!-- <img src="../../assets/icon/stop-white.png" height="32px" width="32px"/> -->
               </ion-button>
@@ -218,7 +283,7 @@
           </ng-container>
           <ng-template #beginning>
             <!-- <span style="margin-left:10px"> -->
-            <ion-button shape = "round" color = "white" (click) = "onCloseVoiceRecognition(); startLoad()">
+            <ion-button shape = "round" color = "white" (click) = "onCloseVoiceRecognition();">
               <!-- <img src="../../assets/icon/stop-white.png" height="32px" width="32px"/> -->
                 <ion-icon name="mic-outline" style = "font-size: 35px; color: red" #changeColor></ion-icon>
               <!-- <ion-icon name="stop-circle-outline" style = "font-size: 40px"></ion-icon> -->
@@ -228,16 +293,9 @@
         </ng-template>
       </ng-container>
       <ng-template #failure>
-        <span style="margin-left:10px"></span>
-          <!-- <ion-button color="danger" type="button" (click)="onCloseVoiceRecognition()">Close</ion-button>
-          <ion-button color="success" type="button" (click)="onStartVoiceRecognition()">Restart</ion-button> -->
-          <ion-button color="danger" (click) = "onStartVoiceRecognition()">
-          <ion-icon name="play-circle-outline" style = "font-size: 40px"
-          ></ion-icon>
-          </ion-button>
-          <ion-button color="success" (click) = "onCheck()">
-            Check    
-          </ion-button>
+        <ion-button color="white" shape = "round" (click) = "onStartVoiceRecognition()">
+          <ion-icon name="mic-outline" style = "font-size: 35px; color:rgb(71, 71, 71);"></ion-icon>
+        </ion-button>
       </ng-template>
     </ng-template>
   </ion-toolbar>
