--- a/EmbarkToTalk/src/app/lessons/shadowread/shadowread.page.scss
+++ b/EmbarkToTalk/src/app/lessons/shadowread/shadowread.page.scss
@@ -179,3 +179,7 @@ ion-icon-footer {
 .bg-style {
   background: url(../../../assets/icon/embarkbackground.png) 0 0/100% 100% no-repeat;
 }
+
+.card-content-md{
+  min-height: 50px;
+}
