--- a/EmbarkToTalk/src/app/talk/talk.page.html
+++ b/EmbarkToTalk/src/app/talk/talk.page.html
@@ -17,7 +17,8 @@
 </ion-header>
 
 <ion-content>
-
+  <!-- <div class = "bg-style">
+    <div #list class = "fixed-content" [scrollTop] = "list.scrollHeight"> -->
   <div class="line-bc">
     <!--chat start-->
 
@@ -124,6 +125,8 @@
 
     <!-- </div> -->
   </div>
+  <!-- </div>
+</div> -->
 
 
   <hr>
@@ -196,8 +199,6 @@
 </ion-content>
 
 <ion-footer>
-
-
   <ion-toolbar>
     <!-- <ion-button (click)="onStartVoiceRecognition()" *ngIf="voiceActiveSectionDisabled">
       <ion-icon name="play-circle-outline"></ion-icon>
@@ -214,7 +215,7 @@
         <ion-col></ion-col>
         <ion-col >
           <ion-button shape = "round" color = "white"
-            (click)="onStartVoiceRecognition(); startLoad();" *ngIf="voiceActiveSectionDisabled; else voicesection;">
+            (click)="onStartVoiceRecognition();" *ngIf="voiceActiveSectionDisabled; else voicesection;">
             <ion-icon name="mic-outline" style = "font-size: 35px; color:rgb(71, 71, 71);"></ion-icon>
           </ion-button>          
         </ion-col>
@@ -232,27 +233,9 @@
         </ion-col>
         <!-- <ion-col></ion-col> -->
       </ion-row>
-
-
-  <!-- <ion-toolbar>
-    <ion-row>
-      <ion-col></ion-col>
-      <ion-col>
-        <ion-button (click)="onStartVoiceRecognition()" *ngIf="voiceActiveSectionDisabled; else voicesection;">
-          <ion-icon name="mic-outline" style="font-size: 40px"></ion-icon>
-        </ion-button>
-      </ion-col>
-      <ion-col>
-        <circle-progress [percent]="score * 100" [radius]="20" [outerStrokeWidth]="4" [innerStrokeWidth]="5"
-          [outerStrokeColor]="'#3279a8'" [innerStrokeColor]="'#a4adb3'" [animation]="true" [animationDuration]="300">
-        </circle-progress>
-      </ion-col>
-    </ion-row> -->
-
-    <!-- </ion-buttons> -->
-
-
-    <ng-template #voicesection>
+  
+    
+      <ng-template #voicesection>
       <ng-container *ngIf="!voiceActiveSectionError; else failure">
         <ng-container *ngIf="voiceText; else start">
           <ion-button color="white" shape = "round" (click) = "onStartVoiceRecognition()">
@@ -260,58 +243,26 @@
           </ion-button>
         </ng-container>
         <ng-template #start>
-          <ng-container *ngIf="voiceActiveSectionListening; else beginning" (click) = "onCloseVoiceRecognition(); startLoad();">
-              <ion-button shape = "round" color = "white" (click) = "onCloseVoiceRecognition(); startLoad();">
+          <ng-container *ngIf="voiceActiveSectionListening; else beginning" (click) = "onCloseVoiceRecognition();">
+              <ion-button shape = "round" color = "white" (click) = "onCloseVoiceRecognition();">
                   <ion-icon name="mic-outline" style = "font-size: 35px; color: red" #changeColor></ion-icon>
               </ion-button>
           </ng-container>
           <ng-template #beginning>
-            <ion-button shape = "round" color = "white" (click) = "onCloseVoiceRecognition(); startLoad();">
+            <ion-button shape = "round" color = "white" (click) = "onCloseVoiceRecognition();">
                 <ion-icon name="mic-outline" style = "font-size: 35px; color: red" #changeColor></ion-icon>
             </ion-button>
           </ng-template>
         </ng-template>
       </ng-container>
       <ng-template #failure>
-        <span style="margin-left:10px"></span>
-          <ion-button color="danger" (click) = "onStartVoiceRecognition()">
-          <ion-icon name="play-circle-outline" style = "font-size: 40px"
-          ></ion-icon>
-          </ion-button>
-          <ion-button color="success" (click) = "onCheck()">
-            Check    
-          </ion-button>
+        <ion-button color="white" shape = "round" (click) = "onStartVoiceRecognition()">
+          <ion-icon name="mic-outline" style = "font-size: 35px; color:rgb(71, 71, 71);"></ion-icon>
+        </ion-button>
       </ng-template>
     </ng-template>
 
 
-    <!-- <ng-template #voicesection>
-      <ng-container *ngIf="!voiceActiveSectionError; else failure">
-        <ng-container *ngIf="voiceText; else start">
-
-          <ion-button color="primary" (click)="onStartVoiceRecognition()">
-            <ion-icon name="mic-outline" style="font-size: 40px"></ion-icon>
-          </ion-button>
-        </ng-container>
-        <ng-template #start>
-          <ng-container *ngIf="voiceActiveSectionListening; else beginning" (click)="onCloseVoiceRecognition">
-            <ion-button color="danger" (click)="onCloseVoiceRecognition()">
-              <ion-icon name="stop-circle-outline" style="font-size: 40px"></ion-icon>
-            </ion-button>
-          </ng-container>
-          <ng-template #beginning>
-            <ion-button color="danger" (click)="onCloseVoiceRecognition()">
-              <ion-icon name="stop-circle-outline" style="font-size: 40px"></ion-icon>
-            </ion-button>
-          </ng-template>
-        </ng-template>
-      </ng-container>
-      <ng-template #failure>
-        <span style="margin-left:10px"></span>
-        <ion-button color="primary" (click)="onStartVoiceRecognition()">
-          <ion-icon name="mic-outline" style="font-size: 40px"></ion-icon>
-        </ion-button>
-      </ng-template>
-    </ng-template> -->
+    
   </ion-toolbar>
 </ion-footer>
